Add raven.js v0.7.1

--- a/ajax/libs/raven.js/package.json
+++ b/ajax/libs/raven.js/package.json
@@ -1,9 +1,9 @@
 {
     "name": "raven.js",
     "filename": "raven.min.js",
-    "version": "0.6.0",
+    "version": "0.7.1",
     "description": "JavaScript client for the Sentry realtime event logging and aggregation platform.",
-    "homepage": "https://github.com/lincolnloop/raven-js",
+    "homepage": "https://github.com/getsentry/raven-js",
     "keywords": [
        "raven",
        "sentry"
@@ -16,7 +16,7 @@
    "repositories": [
        {
            "type": "git",
-           "url": "https://github.com/lincolnloop/raven-js"
+           "url": "https://github.com/getsentry/raven-js"
        }
    ]
 }
